# src/assets/swagger-output.json
@@ -37,7 +37,7 @@
             "schema": {
               "type": "string"
             },
-            "description": "Pharmacy   identification."
+            "description": "Pharmacy  identification."
           }
         ],
         "responses": {
@@ -80,49 +80,95 @@
         "description": "Endpoint para criar uma farmácia.",
         "parameters": [
           {
-            "name": "Pharmacy",
-            "in": "body",
-            "description": "Pharmacy information.",
+            "name": "name",
+            "description": "Pharmacy name.",
             "required": true,
+            "in": "query",
             "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "type": "string",
-                  "example": "Pharmacy Name"
-                },
-                "address": {
-                  "type": "string",
-                  "example": "Pharmacy Address"
-                },
-                "email": {
-                  "type": "string",
-                  "example": "Pharmacy Email"
-                }
-              },
-              "required": [
-                "name",
-                "address",
-                "email"
-              ]
+              "type": "string"
+            }
+          },
+          {
+            "name": "cep",
+            "description": "Pharmacy postal code.",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "email",
+            "description": "Pharmacy email.",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "imageurl",
+            "description": "Pharmacy image url.",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "phone",
+            "description": "Pharmacy phone.",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
             }
           }
         ],
         "responses": {
-          "201": {
+          "200": {
             "description": "Farmácia criada com sucesso."
           },
-          "400": {
-            "description": "Campos obrigatórios não preenchidos."
+          "201": {
+            "description": "Created"
           },
           "404": {
             "description": "Erro ao criar farmácia."
           },
+          "406": {
+            "description": "Not Acceptable"
+          },
           "409": {
-            "description": "Farmácia já existe."
+            "description": "Conflict"
           },
           "500": {
             "description": "Erro no servidor."
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "example": "any"
+                  },
+                  "cep": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "imageurl": {
+                    "example": "any"
+                  },
+                  "phone": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -182,6 +228,23 @@
           },
           "500": {
             "description": "Erro no servidor."
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "example": "any"
+                  },
+                  "price": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -357,6 +420,10 @@
                   "type": "number",
                   "example": 100
                 },
+                "promotion": {
+                  "type": "boolean",
+                  "example": true
+                },
                 "stock": {
                   "type": "number",
                   "example": 10
@@ -365,6 +432,7 @@
               "required": [
                 "name",
                 "price",
+                "promotion",
                 "stock"
               ]
             }
@@ -386,11 +454,31 @@
               }
             }
           },
+          "204": {
+            "description": "No Content"
+          },
           "404": {
             "description": "Erro ao atualizar produto."
           },
           "500": {
             "description": "Erro no servidor."
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "price": {
+                    "example": "any"
+                  },
+                  "promotion": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -430,6 +518,20 @@
           },
           "500": {
             "description": "Erro no servidor."
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "quantity": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -523,7 +625,7 @@
         "tags": [
           "User"
         ],
-        "description": "Endpoint\r  para listar todos os usuários.",
+        "description": "Endpoint  para listar todos os usuários.",
         "responses": {
           "200": {
             "description": "Usuários listados com sucesso.",
@@ -542,6 +644,9 @@
           },
           "400": {
             "description": "Erro ao listar usuários."
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Erro no servidor."
@@ -581,6 +686,9 @@
               }
             }
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "404": {
             "description": "Usuário não encontrado."
           },
@@ -608,6 +716,9 @@
           "200": {
             "description": "Usuário deletado com sucesso."
           },
+          "204": {
+            "description": "No Content"
+          },
           "500": {
             "description": "Erro no servidor."
           }
@@ -619,7 +730,7 @@
         "tags": [
           "User"
         ],
-        "description": "Endpoint\r  para realizar login.",
+        "description": "Endpoint  para realizar login.",
         "parameters": [
           {
             "name": "User",
@@ -661,11 +772,31 @@
               }
             }
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
             "description": "Credenciais inválidas."
           },
           "500": {
             "description": "Erro no servidor."
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -722,8 +853,34 @@
               }
             }
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "409": {
+            "description": "Conflict"
+          },
           "500": {
             "description": "Erro no servidor."
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -747,6 +904,15 @@
           "User"
         ],
         "description": "Endpoint para obter informações do usuário.",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Informações do usuário obtidas com sucesso.",
@@ -762,6 +928,15 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "498": {
+            "description": ""
           }
         }
       }
@@ -773,6 +948,27 @@
         ],
         "description": "Endpoint para atualizar o papel do usuário.",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "id",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "role",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
           {
             "name": "User",
             "in": "params",
@@ -800,6 +996,15 @@
         "responses": {
           "200": {
             "description": "Papel do usuário atualizado com sucesso."
+          },
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Erro no servidor."
@@ -847,8 +1052,31 @@
           "204": {
             "description": "Produto linkado ao usuário com sucesso."
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
           "500": {
             "description": "Erro no servidor."
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "example": "any"
+                  },
+                  "prodid": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -890,11 +1118,43 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "OK"
+          },
           "204": {
             "description": "Produto comprado com sucesso."
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
           "500": {
             "description": "Erro no servidor."
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "example": "any"
+                  },
+                  "prodid": {
+                    "example": "any"
+                  },
+                  "pharid": {
+                    "example": "any"
+                  },
+                  "quantity": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
